# billSplit

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
notebook/: Prototype Flow.ipynb
src/: friends.py  help.py  models.py  scan.py  split.py  summary.py  upload.py
