[tool.poetry]
name = "billSplit"
version = "0.1.0"
description = ""
authors = ["Lukas Scholtes <luke.scholtes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"
opencv-python = "^4.6.0.66"
imutils = "^0.5.4"
scipy = "^1.9.3"
pytesseract = "^0.3.10"
ipywidgets = "^8.0.2"
streamlit = "^1.15.2"
streamlit-cropper = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
